# LinuxLogger

./: CMakeLists.txt  LoggerTest.cpp  README.md  rebuild.sh
LoggerLib/: CMakeLists.txt  Logger.cpp  Logger.h
examples/: CMakeLists.txt  LoggerTest.cpp
include/Logger/: Logger.h
src/: CMakeLists.txt  Logger.cpp
